# VulkanCore

./: CMakeLists.txt  compile_flags.txt
include/: Color.hpp  Scalar.hpp
include/management/: ComponentManager.hpp  EventManager.hpp  ResourceManager.hpp
include/texture/: Texture.hpp  TextureAtlas.hpp  Tileset.hpp
resources/shaders/: shader.vert  shader.vert.spv
src/: Camera.cpp  Camera.hpp  Descriptors.hpp  Engine.cpp  Engine.hpp  FrameInfo.hpp  FreeList.hpp  Global.cpp  Global.hpp  GlobalRenderSystem.cpp  GlobalRenderSystem.hpp  RenderScene.cpp  RenderScene.hpp  RenderSystem.cpp  RenderSystem.hpp  UIRenderSystem.cpp  UIRenderSystem.hpp  main.cpp
src/game/: GameContext.hpp
src/gui/: GUIContext.cpp  GUIContext.hpp  GUIRendering.cpp  GUIRendering.hpp
src/model/: GPUManager.hpp  GPUMaterial.hpp  GPUMesh.cpp  GPUMesh.hpp  Mesh.cpp  Mesh.hpp  MeshObject.cpp  MeshObject.hpp  Model.cpp  Model.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/rendering/: GlobalRenderSystem.cpp  GlobalRenderSystem.hpp  RenderComponent.hpp  RenderManagement.hpp  RenderService.cpp  RenderService.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  UIRenderSystem.cpp
src/texture/: Texture.cpp  TextureAtlas.cpp  Tileset.cpp
src/vk/: Buffer.cpp  Buffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  FrameInfo.hpp  GPUTexture.cpp  GPUTexture.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VkTexture.cpp  VkTexture.hpp  (+2 more)
(+6 files in other folders)
